# fx2json

./: .gitignore  README.md  fx2json.cabal
app/: Main.hs
src/Fx2json/: CsvParser.hs  Util.hs
